# bitter-retrieval

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  colab_code.py  download_data.py  evaluate_model.py  example_experiments.sh  label_all_splits.sh  label_msmarco.py  my_config.json  push_to_huggingface.py  pyproject.toml  reload_env.sh  run_experiment.py  run_training.sh  setup.sh  setup_env.py  test_gemini.py  test_import.py  test_setup.py  train_retrieval.py
bitter_retrieval/: __init__.py  config.py
bitter_retrieval/evaluation/: __init__.py  evaluator.py  llm_judge.py  metrics.py
bitter_retrieval/training/: __init__.py  losses.py  schedulers.py  trainer.py
bitter_retrieval/utils/: __init__.py  device.py  encoding.py  io.py  logging.py
configs/: README.md  default.yaml
configs/experiments/: full_modular.yaml  infonce_only.yaml  kl_margin.yaml  kl_only.yaml  margin_only.yaml
scripts/: evaluate.py  label_data.py  push_to_hf.py  setup_env.py  train.py
src/bitter_retrieval/: __init__.py  auth.py  config.py  data.py  data_label.py  evaluation.py  models.py  train.py  utils.py
tests/: test_openai.py
