[project]
name = "bitter-retrieval"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Ryan",email = "nickcdryan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.12.4,<0.13.0)",
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bitter_retrieval", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
